--- a/canvasPopUpYoutube.html
+++ b/canvasPopUpYoutube.html
@@ -147,7 +147,7 @@ $(document).ready(function()
 </div>
 
 
-<img id="img" src="img/w10-1.jpg" style="width: 100%;">
+<img id="img" src="http://jwct95.freevar.com/code/img/w10-1.jpg" style="width: 100%;">
 
 
 <center></center>
